@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: listbox.test,v 1.28.2.1 2008/10/09 21:20:45 dgp Exp $
+# RCS: @(#) $Id: listbox.test,v 1.28.2.2 2008/11/12 22:43:25 patthoyts Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -2131,11 +2131,16 @@ test listbox-28.1 {listbox -activestyle} {
     listbox .l -activ non
     .l cget -activestyle
 } none
-test listbox-28.2 {listbox -activestyle} {
+test listbox-28.2-nonwin {listbox -activestyle} {nonwin} {
     destroy .l
     listbox .l
     .l cget -activestyle
 } dotbox
+test listbox-28.2-win {listbox -activestyle} {win} {
+    destroy .l
+    listbox .l
+    .l cget -activestyle
+} underline
 test listbox-28.3 {listbox -activestyle} {
     destroy .l
     listbox .l -activestyle und
